Fix text centering and image stretching
Also fixed missing div closing tag in gelatin.html

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   font-family: Verdana, Tahoma, sans-serif;
   color: #000000;
   padding: 16px;
+  text-align: left;
 }
 .head {
   text-align: center;
@@ -17,10 +18,14 @@ body {
 }
 .pictext img {
   width: auto;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 .pictext .descrip {
-  margin-right: 30%;
+  text-align: left;
+}
+.descrip h2 {
+  font-size: 28px;
 }
 .return {
   font-size: 20px;
@@ -62,14 +67,6 @@ body {
 }
 .pic {
   width: 500px;
-}
-.descrip {
-/*  border-top: 4px solid rgb(128, 18, 18);
-  border-bottom: 4px solid rgb(128, 18, 18);
-  margin: 16px 0px;*/
-}
-.descrip h2 {
-  font-size: 28px;
 }
 .instruct,
 .note {
